--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="name.rohanarora.maps" android:versionCode="1" android:versionName="1.0">
+  <!-- Phone must have OpenGL ES 2 to render maps-->
+  <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
+
+  <!--Source: https://developers.google.com/maps/documentation/android/start#obtain_a_google_maps_api_key -->
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <!-- The following two permissions are not required to use
+            Google Maps Android API v2, but are recommended. -->
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
   <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     <activity android:name="MainActivity" android:label="@string/app_name">
       <intent-filter>
