--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,12 +13,16 @@
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
   <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-    <activity android:name="MainActivity" android:label="@string/app_name">
+    <activity android:name=".HelloJNIActivity" android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <activity android:name=".SensorActivity" />
+    <activity android:name=".MainActivity" />
+
     <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
     <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyADDVi1mC8bslhSPd3rEJdd4T20ew4UQ4s"/>
   </application>
